--- a/src/Wallabag/CoreBundle/Resources/translations/messages.en.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.en.yml
@@ -263,6 +263,8 @@ entry:
         order_label: 'Order'
         by:
             creation_date: 'Creation date'
+            starred_date: 'Starred date'
+            archive_date: 'Archived date'
             title: 'Title'
             last_updated: 'Last updated'
         ascending: 'Ascending'
