--- a/src/Wallabag/CoreBundle/Resources/translations/messages.ro.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.ro.yml
@@ -260,12 +260,16 @@ entry:
     sort:
         # title: 'Sort options'
         # status_label: 'Sort by'
+        # order_label: 'Order'
         # by:
-        #    creation_date: 'Creation date'
-        #    title: 'Title'
-        #    last_updated: 'Last updated'
-        #ascending: 'Asencending'
+            # creation_date: 'Creation date'
+            # starred_date: 'Starred date'
+            # archive_date: 'Archived date'
+            # title: 'Title'
+            # last_updated: 'Last updated'
+        # ascending: 'Ascending'
         # descending: 'Descending'
+        # sort: 'Sort'
     view:
         left_menu:
             # back_to_top: 'Back to top'
