--- a/src/Wallabag/CoreBundle/Resources/translations/messages.ru.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.ru.yml
@@ -256,6 +256,19 @@ entry:
         action:
             clear: 'Очистить'
             filter: 'Выбрать'
+    sort:
+        # title: 'Sort options'
+        # status_label: 'Sort by'
+        # order_label: 'Order'
+        # by:
+            # creation_date: 'Creation date'
+            # starred_date: 'Starred date'
+            # archive_date: 'Archived date'
+            # title: 'Title'
+            # last_updated: 'Last updated'
+        # ascending: 'Ascending'
+        # descending: 'Descending'
+        # sort: 'Sort'
     view:
         left_menu:
             back_to_top: 'Наверх'
