--- a/src/Wallabag/CoreBundle/Resources/translations/messages.da.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.da.yml
@@ -269,7 +269,7 @@ entry:
             # last_updated: 'Last updated'
         # ascending: 'Ascending'
         # descending: 'Descending'
-        # sort: 'Sort'
+        # button: 'Sort'
     view:
         left_menu:
             # back_to_top: 'Back to top'
