--- a/src/Wallabag/CoreBundle/Resources/translations/messages.ja.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.ja.yml
@@ -248,7 +248,7 @@ entry:
             # last_updated: 'Last updated'
         # ascending: 'Ascending'
         # descending: 'Descending'
-        # sort: 'Sort'
+        # button: 'Sort'
     view:
         left_menu:
             back_to_top: 'トップへ戻る'
