--- a/src/Wallabag/CoreBundle/Resources/translations/messages.th.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.th.yml
@@ -268,7 +268,7 @@ entry:
             # last_updated: 'Last updated'
         # ascending: 'Ascending'
         # descending: 'Descending'
-        # sort: 'Sort'
+        # button: 'Sort'
     view:
         left_menu:
             back_to_top: 'กลับไปข้างบน'
