--- a/src/Wallabag/CoreBundle/Resources/translations/messages.oc.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.oc.yml
@@ -33,7 +33,7 @@ menu:
         back_to_unread: 'Tornar als articles pas legits'
         users_management: 'Gestion dels utilizaires'
         site_credentials: 'Identificants del site'
-        # ignore_origin_instance_rules: 'Global ignore origin rules'
+        ignore_origin_instance_rules: 'Règlas globalas per ignorar l’origina'
         quickstart: "Per ben començar"
     top:
         add_new_entry: 'Enregistrar un novèl article'
@@ -46,7 +46,7 @@ menu:
 
 footer:
     wallabag:
-        elsewhere: 'Emportatz wallabag amb vosautres'
+        elsewhere: 'Emportatz wallabag amb vos'
         social: 'Social'
         powered_by: 'propulsat per'
         about: 'A prepaus'
@@ -60,7 +60,7 @@ config:
         user_info: 'Mon compte'
         password: 'Senhal'
         rules: "Règlas d'etiquetas automaticas"
-        # ignore_origin: 'Ignore origin rules'
+        ignore_origin: 'Règlas d’ignorar l’origina'
         new_user: 'Crear un compte'
         reset: 'Zòna de reïnicializacion'
     form:
@@ -169,7 +169,7 @@ config:
                 domainName: "Lo nom de domeni de l'article"
             operator_description:
                 label: 'Operator'
-                less_than: 'Mens que…...'
+                less_than: 'Mens que…'
                 strictly_less_than: 'Estrictament mens que…'
                 greater_than: 'Mai que…'
                 strictly_greater_than: 'Estrictament mai que…'
@@ -180,25 +180,25 @@ config:
                 matches: 'Teste se un <i>subjècte</i> correspond a una <i>recèrca</i> (non sensibla a la cassa).<br />Exemple : <code>title matches \"football\"</code>'
                 notmatches: 'Teste se <i>subjècte</i> correspond pas a una <i>recèrca</i> (sensibla a la cassa).<br />Example : <code>title notmatches "football"</code>'
     form_ignore_origin_rules:
-        # faq:
-        #     title: 'FAQ'
+        faq:
+            title: 'FAQ'
         #     ignore_origin_rules_definition_title: 'What does « ignore origin rules » mean?'
         #     ignore_origin_rules_definition_description: 'They are used by wallabag to automatically ignore an origin address after a redirect.<br />If a redirect occurs while fetching a new entry, all the ignore origin rules (<i>user defined and instance defined</i>) will be used to ignore the origin address.'
-        #     how_to_use_them_title: 'How do I use them?'
+            how_to_use_them_title: 'Cossí los utilizi ?'
         #     how_to_use_them_description: 'Let us assume you want to ignore the origin of an entry coming from « <i>rss.example.com</i> » (<i>knowing that after a redirect, the actual address is example.com</i>).<br />In that case, you should put « host = "rss.example.com" » in the <i>Rule</i> field.'
         #     variables_available_title: 'Which variables and operators can I use to write rules?'
         #     variables_available_description: 'The following variables and operators can be used to create ignore origin rules:'
         #     meaning: 'Meaning'
         #     variable_description:
-        #         label: 'Variable'
+                label: 'Variabla'
         #         host: 'Host of the address'
         #         _all: 'Full address, mainly for pattern matching'
-        #     operator_description:
-        #         label: 'Operator'
-        #         equal_to: 'Equal to…'
+            operator_description:
+                label: 'Operator'
+                equal_to: 'Egal a…'
         #         matches: 'Tests that a <i>subject</i> matches a <i>search</i> (case-insensitive).<br />Example: <code>_all ~ "https?://rss.example.com/foobar/.*"</code>'
     otp:
-        page_title: Autentificacion en dos temps
+        page_title: 'Autentificacion en dos temps'
         app:
             two_factor_code_description_1: Avètz pas qu’activat l’autentificacion en dos temps, dobrissètz l’aplicacion OTP e utilizatz aqueste còdi per obténer un senhal unic. Apareisserà aprèp un recargament de pagina.
             two_factor_code_description_2: 'Podètz numerizar aqueste còdi QR amb l’aplicacion :'
@@ -305,7 +305,7 @@ entry:
         reading_time_minutes_short: "%readingTime% min"
         address: "Adreça"
         added_on: "Ajustat a"
-        # published_on: "Published on"
+        published_on: "Publicat lo"
 
 about:
     page_title: 'A prepaus'
@@ -375,30 +375,30 @@ howto:
         go_config: Anar a la config
         go_import: Anar per importar
         go_developers: Anar al canton desvolopaires
-        go_howto: Anar a l'ajuda (aquesta quita pagina !)
+        go_howto: "Anar a l'ajuda (aquesta quita pagina !)"
         go_logout: Desconnexion
         list_title: Acorchis disponibles dins las paginas de lista
         search: Afichar lo formulari de recèrca
         article_title: Acorchis disponibles dins la vista article
-        open_original: Dobrir l'URL originala de l'article
-        toggle_favorite: Cambiar l'estatut Favorit per l'article
-        toggle_archive: Cambiar l'estatut Legit per l'article
+        open_original: "Dobrir l'URL originala de l'article"
+        toggle_favorite: "Cambiar l'estatut Favorit per l'article"
+        toggle_archive: "Cambiar l'estatut Legit per l'article"
         delete: Suprimir l'article
         material_title: Acorchis solament disponibles amb lo tèma Material
         add_link: Apondre un acorchi
         hide_form: Rescondre lo formulari actual (recèrca o nòu ligam)
         arrows_navigation: Navigar dins los articles
-        open_article: Afichar l'article seleccionat
+        open_article: "Afichar l'article seleccionat"
 
 quickstart:
-    page_title: 'Per ben començar'
+    page_title: 'Ben començar'
     more: 'Mai…'
     intro:
-        title: 'Benvenguda sus wallabag !'
+        title: 'La benvenguda sus wallabag !'
         paragraph_1: "Anem vos guidar per far lo torn de la proprietat e vos presentar unas foncionalitats que vos poirián interessar per vos apropriar aquesta aisina."
         paragraph_2: 'Seguètz-nos !'
     configure:
-        title: "Configuratz l'aplicacion"
+        title: "Configurar l'aplicacion"
         description: "Per fin d'aver una aplicacion que vos va ben, anatz veire la configuracion de wallabag."
         language: "Cambiatz la lenga e l'estil de l'aplicacion"
         feed: 'Activatz los fluxes RSS'
@@ -420,10 +420,10 @@ quickstart:
         title: 'Migrar dempuèi un servici existent'
         description: "Sètz un ancian utilizaire d'un servici existent ? Vos ajudarem a trapar vòstras donadas sus wallabag."
         pocket: 'Migrar dempuèi Pocket'
-        wallabag_v1: 'Migrar dempuèi wallabag v1'
-        wallabag_v2: 'Migrar dempuèi wallabag v2'
-        readability: 'Migrar dempuèi Readability'
-        instapaper: 'Migrar dempuèi Instapaper'
+        wallabag_v1: 'Migrar de wallabag v1'
+        wallabag_v2: 'Migrar de wallabag v2'
+        readability: 'Migrar de Readability'
+        instapaper: 'Migrar de Instapaper'
     developer:
         title: 'Pels desvolopaires'
         description: 'Avèm tanben pensat als desvolopaires : Docker, API, traduccions, etc.'
@@ -432,7 +432,7 @@ quickstart:
     docs:
         title: 'Documentacion complèta'
         description: "I a un fum de foncionalitats dins wallabag. Esitetz pas a legir lo manual per las conéisser e aprendre a las utilizar."
-        annotate: 'Anotar vòstre article'
+        annotate: 'Anotatz vòstre article'
         export: 'Convertissètz vòstres articles en ePub o en PDF'
         search_filters: "Aprenètz a utilizar lo motor de recèrca e los filtres per retrobar l'article que vos interèssa"
         fetching_errors: "Qué far se mon article es pas recuperat coma cal ?"
@@ -487,9 +487,9 @@ import:
     wallabag_v2:
         page_title: 'Importar > Wallabag v2'
         description: "Aquesta aisina importarà totas vòstras donadas d'una instància mai de wallabag v2. Anatz dins totes vòstres articles, puèi, sus la barra laterala, clicatz sus \"JSON\". Traparetz un fichièr \"All articles.json\"."
-    # elcurator:
-    #     page_title: 'Import > elCurator'
-    #     description: 'This importer will import all your elCurator articles. Go to your preferences in your elCurator account and then, export your content. You will have a JSON file.'
+    elcurator:
+        page_title: 'Importar > elCurator'
+        description: 'Aquesta aisina importarà totes vòstres articles de elCurator. Anatz a vòstras preferéncias de compte elCurator puèi exportatz vòstre contengut. Auretz un fichièr JSON.'
     readability:
         page_title: 'Importar > Readability'
         description: "Aquesta aisina importarà totas vòstres articles de Readability. Sus la pagina de l'aisina (https://www.readability.com/tools/), clicatz sus \"Export your data\" dins la seccion \"Data Export\". Recebretz un corrièl per telecargar un json (qu'acaba pas amb un .json de fach)."
@@ -550,7 +550,7 @@ developer:
         field_name: 'Nom del client'
         field_id: 'ID Client'
         field_secret: 'Clau secrèta'
-        back: 'Retour'
+        back: 'Retorn'
         read_howto: 'Legir "cossí crear ma primièra aplicacion"'
     howto:
         page_title: 'Gestion dels clients API > Cossí crear ma primièra aplicacion'
@@ -595,16 +595,16 @@ user:
         placeholder: "Filtrar per nom d'utilizaire o corrièl"
 
 site_credential:
-    page_title: Gestion dels identificants
-    new_site_credential: Crear un identificant
-    edit_site_credential: Modificar un identificant
+    page_title: 'Gestion dels identificants'
+    new_site_credential: 'Crear un identificant'
+    edit_site_credential: 'Modificar un identificant'
     description: "Aquí podètz gerir vòstres identificants pels sites que los demandan (ne crear, ne modifiar, ne suprimir) coma los sites a peatge, etc."
     list:
          actions: 'Accions'
          edit_action: 'Modificar'
          yes: 'Òc'
          no: 'Non'
-         create_new_one: Crear un novèl identificant
+         create_new_one: 'Crear un novèl identificant'
     form:
         username_label: "Nom d'utilizaire"
         host_label: 'Òste (subdomain.example.org, .example.org, etc.)'
@@ -615,7 +615,7 @@ site_credential:
         back_to_list: 'Tornar a la lista'
 
 error:
-    page_title: Una error s'es produsida
+    page_title: "Una error s'es produsida"
 
 flashes:
     config:
@@ -634,7 +634,7 @@ flashes:
             entries_reset: Articles levats
             archived_reset: Articles archivat suprimits
             otp_enabled: Autentificacion en dos temps activada
-            # otp_disabled: Two-factor authentication disabled
+            otp_disabled: Autentificacion en dos temps desactivada
             tagging_rules_imported: Règlas d’etiquetatge importadas
             tagging_rules_not_imported: Error en important las règlas d’etiquetatge
             # ignore_origin_rules_deleted: 'Ignore origin rule deleted'
