--- a/app/Resources/CraueConfigBundle/translations/CraueConfigBundle.zh.yml
+++ b/app/Resources/CraueConfigBundle/translations/CraueConfigBundle.zh.yml
@@ -27,9 +27,9 @@ export: "导出"
 import: "导入"
 misc: "杂项"
 modify_settings: "申请"
-piwik_host: 你的网站在 Piwik 的主机名（不包括 http:// or https://）
-piwik_site_id: 你的网站在 Piwik 的 ID
-piwik_enabled: 启用 Piwik
+matomo_host: 你的网站在 Matomo 的主机名（不包括 http:// or https://）
+matomo_site_id: 你的网站在 Matomo 的 ID
+matomo_enabled: 启用 Matomo
 demo_mode_enabled: "启用演示模式？(仅用于 wallabag 公开演示)"
 demo_mode_username: "Demo user"
 share_public: 允许为项目启用公开链接
