Looks like when merging stuff from Weblate we lost translations
The big PR removed some translations.
I hope I added them back.

--- a/src/Wallabag/CoreBundle/Resources/translations/messages.fr.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.fr.yml
@@ -32,11 +32,15 @@ menu:
         back_to_unread: Retour aux articles non lus
         users_management: Gestion des utilisateurs
         site_credentials: Accès aux sites
+        ignore_origin_instance_rules: "Règles globales d'omission d'origine"
+        quickstart: "Pour bien débuter"
     top:
         add_new_entry: Sauvegarder un nouvel article
         search: Rechercher
         filter_entries: Filtrer les articles
+        random_entry: Aller à un article aléatoire de cette liste
         export: Exporter
+        account: "Mon compte"
     search_form:
         input_label: Saisissez votre terme de recherche
 footer:
@@ -50,11 +54,13 @@ config:
     page_title: Configuration
     tab_menu:
         settings: Paramètres
-        rss: RSS
         user_info: Mon compte
         password: Mot de passe
         rules: Règles de tag automatiques
         new_user: Créer un compte
+        feed: "Flux"
+        ignore_origin: "Règles d'omission d'origine"
+        reset: "Réinitialisation"
     form:
         save: Enregistrer
     form_settings:
@@ -80,25 +86,35 @@ config:
         help_reading_speed: wallabag calcule une durée de lecture pour chaque article. Vous pouvez définir ici, grâce à cette liste déroulante, si vous lisez plus ou moins vite. wallabag recalculera la durée de lecture de chaque article.
         help_language: Vous pouvez définir la langue de l’interface de wallabag.
         help_pocket_consumer_key: Nécessaire pour l’import depuis Pocket. Vous pouvez le créer depuis votre compte Pocket.
-    form_rss:
-        description: Les flux RSS fournis par wallabag vous permettent de lire vos articles sauvegardés dans votre lecteur de flux préféré. Pour pouvoir les utiliser, vous devez d’abord créer un jeton.
-        token_label: Jeton RSS
-        no_token: Aucun jeton généré
-        token_create: Créez votre jeton
-        token_reset: Réinitialisez votre jeton
-        rss_links: Adresses de vos flux RSS
-        rss_link:
-            unread: Non lus
-            starred: Favoris
-            archive: Lus
-            all: Tous
-        rss_limit: Nombre d’articles dans le flux
+    form_feed:
+        description: "Les flux Atom fournis par wallabag vous permettent de lire vos articles sauvegardés dans votre lecteur de flux préféré. Pour pouvoir les utiliser, vous devez d’abord créer un jeton."
+        token_label: "Jeton de flux"
+        no_token: "Aucun jeton généré"
+        token_create: "Créez votre jeton"
+        token_reset: "Réinitialisez votre jeton"
+        token_revoke: 'Supprimer le jeton'
+        feed_links: "Adresses de vos flux"
+        feed_link:
+            unread: "Non lus"
+            starred: "Favoris"
+            archive: "Lus"
+            all: "Tous"
+        feed_limit: "Nombre d’articles dans le flux"
     form_user:
         two_factor_description: Activer l’authentification double-facteur veut dire que vous allez recevoir un code par courriel à chaque nouvelle connexion non approuvée.
         name_label: Nom
         email_label: Adresse courriel
-        twoFactorAuthentication_label: Double authentification
-        help_twoFactorAuthentication: Si vous activez 2FA, à chaque tentative de connexion à wallabag, vous recevrez un code par courriel.
+        login_label: 'Identifiant'
+        two_factor:
+            emailTwoFactor_label: 'En utlisant l’email (recevez un code par email)'
+            googleTwoFactor_label: 'En utilisant une application de mot de passe à usage unique (ouvrez l’app, comme Google Authenticator, Authy or FreeOTP, pour obtenir un mot de passe à usage unique)'
+            table_method: Méthode
+            table_state: État
+            table_action: Action
+            state_enabled: Activé
+            state_disabled: Désactivé
+            action_email: Utiliser l'email
+            action_app: Utiliser une app OTP
         delete:
             title: Supprimer mon compte (attention danger !)
             description: Si vous confirmez la suppression de votre compte, TOUS les articles, TOUS les tags, TOUTES les annotations et votre compte seront DÉFINITIVEMENT supprimé (c’est IRRÉVERSIBLE). Vous serez ensuite déconnecté.
@@ -124,6 +140,15 @@ config:
         edit_rule_label: éditer
         rule_label: Règle
         tags_label: Tags
+        card:
+            new_tagging_rule: Créer une règle
+            import_tagging_rules: Importer des règles
+            import_tagging_rules_detail: Vous devez sélectionné un fichier JSON que vous avez précédemment exporté.
+            export_tagging_rules: Exporter les règles
+            export_tagging_rules_detail: Un fichier JSON sera téléchargé et vous pourrez l'utiliser pour ré-importer les règles ou comme sauvegarde.
+        file_label: Fichier JSON
+        import_submit: Importer
+        export: Export
         faq:
             title: FAQ
             tagging_rules_definition_title: Que signifient les règles de tag automatiques ?
@@ -156,6 +181,33 @@ config:
                 and: Une règle ET l’autre
                 matches: 'Teste si un <i>sujet</i> correspond à une <i>recherche</i> (non sensible à la casse).<br />Exemple : <code>title matches "football"</code>'
                 notmatches: 'Teste si un <i>sujet</i> ne correspond pas à une <i>recherche</i> (non sensible à la casse).<br />Exemple : <code>title notmatches "football"</code>'
+    form_ignore_origin_rules:
+        faq:
+            title: "FAQ"
+            ignore_origin_rules_definition_title: "Que signifient les règles d'omission d'origine ?"
+            ignore_origin_rules_definition_description: "Ce sont des règles utilisées par wallabag pour omettre automatiquement l'adresse d'origine après une redirection.<br />Si une redirection intervient pendant la récupération d'un nouvel article, toutes les règles d'omission (<i>règles utilisateur et instance</i>) seront utilisées afin d'ignorer ou non l'adresse d'origine."
+            how_to_use_them_title: "Comment les utiliser ?"
+            how_to_use_them_description: "Imaginons que vous vouliez omettre l'origine d'un article provenant de « <i>rss.example.com</i> » (<i>sachant qu'après la redirection, l'adresse réelle est example.com</i>).<br />Dans ce cas, vous devriez mettre « host = \"rss.example.com\" » dans le champ <i>Règle</i>."
+            variables_available_title: "Quelles variables et opérateurs puis-je utiliser pour écrire des règles ?"
+            variables_available_description: "Les variables et opérateurs suivants peuvent être utilisés pour écrire des règles d'omission d'origine :"
+            meaning: "Signification"
+            variable_description:
+                label: "Variable"
+                host: "Hôte"
+                _all: "Adresse complète, utile pour les expressions régulières"
+            operator_description:
+                label: "Opérateur"
+                equal_to: "Égal à…"
+                matches: "Teste si un <i>sujet</i> correspond à une <i>recherche</i> (non sensible à la casse).<br />Exemple : <code>_all ~ \"https?://rss.example.com/foobar/.*\"</code>"
+    otp:
+        page_title: Authentification double-facteur
+        app:
+            two_factor_code_description_1: Vous venez d’activer l’authentification double-facteur, ouvrez votre application OTP pour configurer la génération du mot de passe à usage unique. Ces informations disparaîtront après un rechargement de la page.
+            two_factor_code_description_2: 'Vous pouvez scanner le QR code avec votre application :'
+            two_factor_code_description_3: 'N’oubliez pas de sauvegarder ces codes de secours dans un endroit sûr, vous pourrez les utiliser si vous ne pouvez plus accéder à votre application OTP :'
+            two_factor_code_description_4: 'Testez un code généré par votre application OTP :'
+            cancel: Annuler
+            enable: Activer
 entry:
     default_title: Titre de l’article
     page_titles:
@@ -254,6 +306,7 @@ entry:
         reading_time_minutes_short: '%readingTime% min'
         address: Adresse
         added_on: Ajouté le
+        published_on: Publié le
 about:
     page_title: À propos
     top_menu:
@@ -393,6 +446,8 @@ tag:
     list:
         number_on_the_page: '{0} Il n’y a pas de tag.|{1} Il y a un tag.|]1,Inf[ Il y a %count% tags.'
         see_untagged_entries: Voir les articles sans tag
+        no_untagged_entries: 'Aucun article sans tag.'
+        untagged: "Article sans tag"
     new:
         add: Ajouter
         placeholder: Vous pouvez ajouter plusieurs tags, séparés par une virgule.
@@ -477,6 +532,7 @@ developer:
             redirect_uris_label: Adresses de redirection (optionnel)
             save_label: Créer un nouveau client
         action_back: Retour
+        copy_to_clipboard: Copier
     client_parameter:
         page_title: Gestion des clients API > Les paramètres de votre client
         page_description: Voici les paramètres de votre client.
@@ -509,19 +565,20 @@ user:
         no: Non
         create_new_one: Créer un nouvel utilisateur
     form:
-        username_label: Nom d’utilisateur
-        name_label: Nom
-        password_label: Mot de passe
-        repeat_new_password_label: Confirmez votre nouveau mot de passe
-        plain_password_label: ????
-        email_label: Adresse courriel
-        enabled_label: Activé
-        last_login_label: Dernière connexion
-        twofactor_label: Double authentification
-        save: Sauvegarder
-        delete: Supprimer
-        delete_confirm: Êtes-vous sûr ?
-        back_to_list: Revenir à la liste
+        username_label: "Identifiant (ne peut être changé)"
+        name_label: "Nom"
+        password_label: "Mot de passe"
+        repeat_new_password_label: "Confirmez votre nouveau mot de passe"
+        plain_password_label: "Mot de passe en clair"
+        email_label: "Adresse courriel"
+        enabled_label: "Activé"
+        last_login_label: "Dernière connexion"
+        twofactor_email_label: Double authentification par email
+        twofactor_google_label: Double authentification par OTP app
+        save: "Sauvegarder"
+        delete: "Supprimer"
+        delete_confirm: "Êtes-vous sûr ?"
+        back_to_list: "Revenir à la liste"
     search:
         placeholder: Filtrer par nom d’utilisateur ou courriel
 site_credential:
@@ -548,18 +605,25 @@ error:
 flashes:
     config:
         notice:
-            config_saved: Les paramètres ont bien été mis à jour.
-            password_updated: Votre mot de passe a bien été mis à jour
-            password_not_updated_demo: En démo, vous ne pouvez pas changer le mot de passe de cet utilisateur.
-            user_updated: Vos informations personnelles ont bien été mises à jour
-            rss_updated: La configuration des flux RSS a bien été mise à jour
-            tagging_rules_updated: Règles mises à jour
-            tagging_rules_deleted: Règle supprimée
-            rss_token_updated: Jeton RSS mis à jour
-            annotations_reset: Annotations supprimées
-            tags_reset: Tags supprimés
-            entries_reset: Articles supprimés
-            archived_reset: Articles archivés supprimés
+            config_saved: "Les paramètres ont bien été mis à jour."
+            password_updated: "Votre mot de passe a bien été mis à jour"
+            password_not_updated_demo: "En démo, vous ne pouvez pas changer le mot de passe de cet utilisateur."
+            user_updated: "Vos informations personnelles ont bien été mises à jour"
+            feed_updated: "La configuration des flux a bien été mise à jour"
+            tagging_rules_updated: "Règles mises à jour"
+            tagging_rules_deleted: "Règle supprimée"
+            feed_token_updated: "Jeton des flux mis à jour"
+            feed_token_revoked: 'Jeton des flux supprimé'
+            annotations_reset: "Annotations supprimées"
+            tags_reset: "Tags supprimés"
+            entries_reset: "Articles supprimés"
+            archived_reset: "Articles archivés supprimés"
+            otp_enabled: "Authentification à double-facteur activée"
+            otp_disabled: "Authentification à double-facteur désactivée"
+            tagging_rules_imported: Règles bien importées
+            tagging_rules_not_imported: Impossible d'importer les règles
+            ignore_origin_rules_deleted: "Règle d'omission d'origine supprimée"
+            ignore_origin_rules_updated: "Règle d'omission d'origine mise à jour"
     entry:
         notice:
             entry_already_saved: Article déjà sauvegardé le %date%
@@ -573,9 +637,11 @@ flashes:
             entry_starred: Article ajouté dans les favoris
             entry_unstarred: Article retiré des favoris
             entry_deleted: Article supprimé
+            no_random_entry: "Aucun article correspond aux critères n'a été trouvé"
     tag:
         notice:
             tag_added: Tag ajouté
+            tag_renamed: "Tag renommé"
     import:
         notice:
             failed: L’import a échoué, veuillez réessayer.
