--- a/src/Wallabag/CoreBundle/Resources/translations/messages.en.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.en.yml
@@ -32,11 +32,15 @@ menu:
         back_to_unread: Back to unread articles
         users_management: Users management
         site_credentials: Site credentials
+        ignore_origin_instance_rules: 'Global ignore origin rules'
+        quickstart: "Quickstart"
     top:
         add_new_entry: Add a new entry
         search: Search
         filter_entries: Filter entries
         export: Export
+        random_entry: Jump to a random entry from that list
+        account: 'My account'
     search_form:
         input_label: Enter your search here
 footer:
@@ -50,11 +54,13 @@ config:
     page_title: Config
     tab_menu:
         settings: Settings
-        rss: RSS
+        feed: 'Feeds'
         user_info: User information
         password: Password
         rules: Tagging rules
         new_user: Add a user
+        ignore_origin: 'Ignore origin rules'
+        reset: 'Reset area'
     form:
         save: Save
     form_settings:
@@ -80,25 +86,35 @@ config:
         help_reading_speed: wallabag calculates a reading time for each article. You can define here, thanks to this list, if you are a fast or a slow reader. wallabag will recalculate the reading time for each article.
         help_language: You can change the language of wallabag interface.
         help_pocket_consumer_key: Required for Pocket import. You can create it in your Pocket account.
-    form_rss:
-        description: RSS feeds provided by wallabag allow you to read your saved articles with your favourite RSS reader. You need to generate a token first.
-        token_label: RSS token
-        no_token: No token
-        token_create: Create your token
-        token_reset: Regenerate your token
-        rss_links: RSS links
-        rss_link:
-            unread: Unread
-            starred: Starred
-            archive: Archived
-            all: All
-        rss_limit: Number of items in the feed
+    form_feed:
+        description: 'Atom feeds provided by wallabag allow you to read your saved articles with your favourite Atom reader. You need to generate a token first.'
+        token_label: 'Feed token'
+        no_token: 'No token'
+        token_create: 'Create your token'
+        token_reset: 'Regenerate your token'
+        token_revoke: 'Revoke the token'
+        feed_links: 'Feed links'
+        feed_link:
+            unread: 'Unread'
+            starred: 'Starred'
+            archive: 'Archived'
+            all: 'All'
+        feed_limit: 'Number of items in the feed'
     form_user:
         two_factor_description: Enabling two factor authentication means you'll receive an email with a code on every new untrusted connection.
-        name_label: Name
-        email_label: Email
-        twoFactorAuthentication_label: Two factor authentication
-        help_twoFactorAuthentication: If you enable 2FA, each time you want to login to wallabag, you'll receive a code by email.
+        login_label: 'Login (can not be changed)'
+        name_label: 'Name'
+        email_label: 'Email'
+        two_factor:
+            emailTwoFactor_label: 'Using email (receive a code by email)'
+            googleTwoFactor_label: 'Using an OTP app (open the app, like Google Authenticator, Authy or FreeOTP, to get a one time code)'
+            table_method: Method
+            table_state: State
+            table_action: Action
+            state_enabled: Enabled
+            state_disabled: Disabled
+            action_email: Use email
+            action_app: Use OTP App
         delete:
             title: Delete my account (a.k.a danger zone)
             description: If you remove your account, ALL your articles, ALL your tags, ALL your annotations and your account will be PERMANENTLY removed (it can't be UNDONE). You'll then be logged out.
@@ -124,6 +140,15 @@ config:
         edit_rule_label: edit
         rule_label: Rule
         tags_label: Tags
+        card:
+            new_tagging_rule: Create a tagging rule
+            import_tagging_rules: Import tagging rules
+            import_tagging_rules_detail: You have to select the JSON file you previously exported.
+            export_tagging_rules: Export tagging rules
+            export_tagging_rules_detail: This will download a JSON file that you can use to import tagging rules elsewhere or to backup them.
+        file_label: JSON file
+        import_submit: Import
+        export: Export
         faq:
             title: FAQ
             tagging_rules_definition_title: What does « tagging rules » mean?
@@ -156,6 +181,33 @@ config:
                 and: One rule AND another
                 matches: 'Tests that a <i>subject</i> matches a <i>search</i> (case-insensitive).<br />Example: <code>title matches "football"</code>'
                 notmatches: "Tests that a <i>subject</i> doesn't match match a <i>search</i> (case-insensitive).<br />Example: <code>title notmatches \"football\"</code>"
+    form_ignore_origin_rules:
+        faq:
+            title: 'FAQ'
+            ignore_origin_rules_definition_title: 'What does « ignore origin rules » mean?'
+            ignore_origin_rules_definition_description: 'They are used by wallabag to automatically ignore an origin address after a redirect.<br />If a redirect occurs while fetching a new entry, all the ignore origin rules (<i>user defined and instance defined</i>) will be used to ignore the origin address.'
+            how_to_use_them_title: 'How do I use them?'
+            how_to_use_them_description: 'Let us assume you want to ignore the origin of an entry coming from « <i>rss.example.com</i> » (<i>knowing that after a redirect, the actual address is example.com</i>).<br />In that case, you should put « host = "rss.example.com" » in the <i>Rule</i> field.'
+            variables_available_title: 'Which variables and operators can I use to write rules?'
+            variables_available_description: 'The following variables and operators can be used to create ignore origin rules:'
+            meaning: 'Meaning'
+            variable_description:
+                label: 'Variable'
+                host: 'Host of the address'
+                _all: 'Full address, mainly for pattern matching'
+            operator_description:
+                label: 'Operator'
+                equal_to: 'Equal to…'
+                matches: 'Tests that a <i>subject</i> matches a <i>search</i> (case-insensitive).<br />Example: <code>_all ~ "https?://rss.example.com/foobar/.*"</code>'
+    otp:
+        page_title: Two-factor authentication
+        app:
+            two_factor_code_description_1: You just enabled the OTP two factor authentication, open your OTP app and use that code to get a one time password. It'll disapear after a page reload.
+            two_factor_code_description_2: 'You can scan that QR Code with your app:'
+            two_factor_code_description_3: 'Also, save these backup codes in a safe place, you can use them in case you lose access to your OTP app:'
+            two_factor_code_description_4: 'Test an OTP code from your configured app:'
+            cancel: Cancel
+            enable: Enable
 entry:
     default_title: Title of the entry
     page_titles:
@@ -254,6 +306,7 @@ entry:
         reading_time_minutes_short: '%readingTime% min'
         address: Address
         added_on: Added on
+        published_on: "Published on"
 about:
     page_title: About
     top_menu:
@@ -346,7 +399,7 @@ quickstart:
         title: Configure the application
         description: In order to have an application which suits you, have a look into the configuration of wallabag.
         language: Change language and design
-        rss: Enable RSS feeds
+        feed: 'Enable feeds'
         tagging_rules: Write rules to automatically tag your articles
     admin:
         title: Administration
@@ -393,6 +446,8 @@ tag:
     list:
         number_on_the_page: '{0} There are no tags.|{1} There is one tag.|]1,Inf[ There are %count% tags.'
         see_untagged_entries: See untagged entries
+        no_untagged_entries: 'There are no untagged entries.'
+        untagged: 'Untagged entries'
     new:
         add: Add
         placeholder: You can add several tags, separated by a comma.
@@ -425,6 +480,9 @@ import:
     wallabag_v2:
         page_title: Import > Wallabag v2
         description: This importer will import all your wallabag v2 articles. Go to All articles, then, on the export sidebar, click on "JSON". You will have a "All articles.json" file.
+    elcurator:
+        page_title: 'Import > elCurator'
+        description: 'This importer will import all your elCurator articles. Go to your preferences in your elCurator account and then, export your content. You will have a JSON file.'
     readability:
         page_title: Import > Readability
         description: This importer will import all your Readability articles. On the tools (https://www.readability.com/tools/) page, click on "Export your data" in the "Data Export" section. You will received an email to download a json (which does not end with .json in fact).
@@ -477,6 +535,7 @@ developer:
             redirect_uris_label: Redirect URIs (optional)
             save_label: Create a new client
         action_back: Back
+        copy_to_clipboard: Copy
     client_parameter:
         page_title: API clients management > Client parameters
         page_description: Here are your client parameters.
@@ -517,7 +576,8 @@ user:
         email_label: Email
         enabled_label: Enabled
         last_login_label: Last login
-        twofactor_label: Two factor authentication
+        twofactor_email_label: Two factor authentication by email
+        twofactor_google_label: Two factor authentication by OTP app
         save: Save
         delete: Delete
         delete_confirm: Are you sure?
@@ -536,9 +596,26 @@ site_credential:
         no: No
         create_new_one: Create a new credential
     form:
-        username_label: Username
-        host_label: Host
-        password_label: Password
+        username_label: 'Login'
+        host_label: 'Host (subdomain.example.org, .example.org, etc.)'
+        password_label: 'Password'
+        save: Save
+        delete: Delete
+        delete_confirm: Are you sure?
+        back_to_list: Back to list
+ignore_origin_instance_rule:
+    page_title: Global ignore origin rules
+    new_ignore_origin_instance_rule: Create a global ignore origin rule
+    edit_ignore_origin_instance_rule: Edit an existing ignore origin rule
+    description: "Here you can manage the global ignore origin rules used to ignore some patterns of origin url."
+    list:
+        actions: Actions
+        edit_action: Edit
+        yes: Yes
+        no: No
+        create_new_one: Create a new global ignore origin rule
+    form:
+        rule_label: Rule
         save: Save
         delete: Delete
         delete_confirm: Are you sure?
@@ -552,14 +629,21 @@ flashes:
             password_updated: Password updated
             password_not_updated_demo: In demonstration mode, you can't change password for this user.
             user_updated: Information updated
-            rss_updated: RSS information updated
             tagging_rules_updated: Tagging rules updated
             tagging_rules_deleted: Tagging rule deleted
-            rss_token_updated: RSS token updated
+            feed_updated: 'Feed information updated'
+            feed_token_updated: 'Feed token updated'
+            feed_token_revoked: 'Feed token revoked'
             annotations_reset: Annotations reset
             tags_reset: Tags reset
             entries_reset: Entries reset
             archived_reset: Archived entries deleted
+            otp_enabled: Two-factor authentication enabled
+            otp_disabled: Two-factor authentication disabled
+            tagging_rules_imported: Tagging rules imported
+            tagging_rules_not_imported: Error while importing tagging rules
+            ignore_origin_rules_deleted: 'Ignore origin rule deleted'
+            ignore_origin_rules_updated: 'Ignore origin rule updated'
     entry:
         notice:
             entry_already_saved: Entry already saved on %date%
@@ -573,9 +657,11 @@ flashes:
             entry_starred: Entry starred
             entry_unstarred: Entry unstarred
             entry_deleted: Entry deleted
+            no_random_entry: 'No article with these criterias was found'
     tag:
         notice:
             tag_added: Tag added
+            tag_renamed: 'Tag renamed'
     import:
         notice:
             failed: Import failed, please try again.
@@ -599,3 +685,8 @@ flashes:
             added: Site credential for "%host%" added
             updated: Site credential for "%host%" updated
             deleted: Site credential for "%host%" deleted
+    ignore_origin_instance_rule:
+        notice:
+            added: 'Global ignore origin rule added'
+            updated: 'Global ignore origin rule updated'
+            deleted: 'Global ignore origin rule deleted'
