--- a/src/Wallabag/CoreBundle/Resources/translations/messages.fr.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.fr.yml
@@ -34,7 +34,9 @@ menu:
         site_credentials: Accès aux sites
         ignore_origin_instance_rules: "Règles globales d'omission d'origine"
         quickstart: "Pour bien débuter"
-        theme_toggle: "Changer le thème"
+        theme_toggle_light: "Thème clair"
+        theme_toggle_dark: "Thème sombre"
+        theme_toggle_auto: "Thème automatique"
     top:
         add_new_entry: Sauvegarder un nouvel article
         search: Rechercher
@@ -275,6 +277,9 @@ entry:
             export: Exporter
             print: Imprimer
             theme_toggle: Changer le thème
+            theme_toggle_light: "Clair"
+            theme_toggle_dark: "Sombre"
+            theme_toggle_auto: "Automatique"
             problem:
                 label: Un problème ?
                 description: Est-ce que cet article s’affiche mal ?
