Added button to show entries with the same domain

--- a/src/Wallabag/CoreBundle/Resources/translations/messages.en.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.en.yml
@@ -224,6 +224,7 @@ entry:
         filtered_search: 'Filtered by search:'
         untagged: Untagged entries
         all: All entries
+        same_domain: Same domain
     list:
         number_on_the_page: '{0} There are no entries.|{1} There is one entry.|]1,Inf[ There are %count% entries.'
         reading_time: estimated reading time
@@ -237,6 +238,7 @@ entry:
         toogle_as_star: Toggle starred
         delete: Delete
         export_title: Export
+        show_same_domain: Show articles with the same domain
     filters:
         title: Filters
         status_label: Status
