--- a/src/Wallabag/CoreBundle/Resources/translations/messages.en.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.en.yml
@@ -237,6 +237,7 @@ entry:
         toogle_as_star: Toggle starred
         delete: Delete
         export_title: Export
+        assign_search_tag: Assign this search to results
     filters:
         title: Filters
         status_label: Status
